# pkg/web/round/latest.go
@@ -2,21 +2,36 @@ package round
 
 import (
 	"encoding/json"
+	"net/http"
 
 	"github.com/compscore/compscore/pkg/cache"
 	"github.com/compscore/compscore/pkg/config"
 	"github.com/compscore/compscore/pkg/data"
+	"github.com/compscore/compscore/pkg/web/models"
 	"github.com/gin-gonic/gin"
 	"github.com/redis/go-redis/v9"
 )
 
+// Latest returns the latest round
+//
+// @Summary Get the latest round
+// @Description Get the latest round
+// @Tags round
+// @Accept json
+// @Produce json
+// @Success 200 {object} models.Round
+// @Failure 500 {object} models.Error
+// @Router /round/latest [get]
 func Latest(ctx *gin.Context) {
 	if config.Production {
 		cachedData, err := cache.Client.Get(ctx, "round/latest").Result()
 		if err != nil && err != redis.Nil {
-			ctx.JSON(500, gin.H{
-				"error": err.Error(),
-			})
+			ctx.JSON(
+				http.StatusInternalServerError,
+				models.Error{
+					Error: err.Error(),
+				},
+			)
 			return
 		}
 
@@ -28,26 +43,35 @@ func Latest(ctx *gin.Context) {
 
 	round, err := data.Round.GetLastRound()
 	if err != nil {
-		ctx.JSON(500, gin.H{
-			"error": err.Error(),
-		})
+		ctx.JSON(
+			http.StatusInternalServerError,
+			models.Error{
+				Error: err.Error(),
+			},
+		)
 		return
 	}
 
 	if config.Production {
 		redisObject, err := json.Marshal(round)
 		if err != nil {
-			ctx.JSON(500, gin.H{
-				"error": err.Error(),
-			})
+			ctx.JSON(
+				http.StatusInternalServerError,
+				models.Error{
+					Error: err.Error(),
+				},
+			)
 			return
 		}
 
 		err = cache.Client.Set(ctx, "round/latest", string(redisObject), config.Redis.FastRefresh).Err()
 		if err != nil {
-			ctx.JSON(500, gin.H{
-				"error": err.Error(),
-			})
+			ctx.JSON(
+				http.StatusInternalServerError,
+				models.Error{
+					Error: err.Error(),
+				},
+			)
 			return
 		}
 	}
